tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_traits_errors_if_trait_is_not_in_scope_for_method_call_and_there_are_multiple_candidates/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Could not resolve 'foo' in path
  ┌─ src/main.nr:4:17
  │
4 │         let _ = bar.foo();
  │                 --------- The following traits which provide `foo` are implemented but not in scope: `private_mod::Foo2`, `private_mod::Foo`
  │

Aborting due to 1 previous error
